--- a/LGPD/index.html
+++ b/LGPD/index.html
@@ -10,5 +10,17 @@
     <h1>Lei Geral de Proteção de Dados Pessoais</h1>
     <h2>LGPD na prática.</h2>
     <p>A lei dispõe sobre o tratamento de dados pessoais, inclusive nos meios digitais, por pessoa natural ou por pessoa jurídica de direito público ou privado,com o objetivo de proteger os direitos fundamentais de liberdade e deprivacidade e o livre desenvolvimento da personalidade da pessoa natural.</p>
+    <p>A lei não se aplica ao tratamento de dados pessoais realizado por pessoa natural para fins exclusivamente particulares e não econômicos; fins exclusivamente jornalístico e artísticos; acadêmicos;segurança pública; defesa nacional; segurança do Estado;atividades de investigação e repressão de infrações penais.(Art.4º).
+    </p>
+    <p>A LGPD entrou em vigor em 18/09/2020 porém as multas só serão aplicadas a partir de agosto de 2021.</p>
+    <p>O surgimento da LGPD foi justamente motivado pela GPDR(Regulamento Geral de Proteção de Dados - União Europeia) e a pressão dos clientes internacionais,já que as exigências incluem toda e qualquer organização que tenha ao menos um cliente da União Europeia em seu banco de dados,sendo que ao menos 90% das organizações brasileiras já deveriam estar em conformidade.</p>
+    <h2>Sanções</h2>
+    <ul>
+        <li>Advertência, com indicação de prazo para adoção de medidas corretivas;</li>
+        <li>Multa simples, de até 2%(dois porcento) do faturamento da pessoa jurídica de direito privado,grupo ou conglomerado no Brasil no seu último exercício, excluídos os tributos, limitada, no total,a R$50.000.000,00(cinquenta milhões de reais)por infração;</li>
+        <li>Multa diária, observado o limite total a que se refere o inciso II;</li>
+        <li>Publicização da infração após devidamente apurada e confirmada a sua ocorrência;</li>
+        <li>Bloqueio dos dados pessoais a que se refere a infração até a sua regularização;</li>
+    </ul>
 </body>
 </html>
