--- a/LGPD/index.html
+++ b/LGPD/index.html
@@ -13,6 +13,7 @@
     <p>A lei não se aplica ao tratamento de dados pessoais realizado por pessoa natural para fins exclusivamente particulares e não econômicos; fins exclusivamente jornalístico e artísticos; acadêmicos;segurança pública; defesa nacional; segurança do Estado;atividades de investigação e repressão de infrações penais.(Art.4º).
     </p>
     <p>A LGPD entrou em vigor em 18/09/2020 porém as multas só serão aplicadas a partir de agosto de 2021.</p>
+    <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709.htm">Lei Geral de Proteção de Dados Pessoais (LGPD).</a>
     <p>O surgimento da LGPD foi justamente motivado pela GPDR(Regulamento Geral de Proteção de Dados - União Europeia) e a pressão dos clientes internacionais,já que as exigências incluem toda e qualquer organização que tenha ao menos um cliente da União Europeia em seu banco de dados,sendo que ao menos 90% das organizações brasileiras já deveriam estar em conformidade.</p>
     <h2>Sanções</h2>
     <ul>
